# nano-agent

./: pyproject.toml
ingestion/: ingestion.py
